--- a/webpack_demo/package.json
+++ b/webpack_demo/package.json
@@ -5,9 +5,9 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "build": "webpack --config webpack.config.js",
     "watch": "webpack --watch",
-    "start": "webpack-dev-server --open",
+    "start": "webpack-dev-server --open webpack.dev.js",
+    "build": "webpack --config webpack.prod.js",
     "server": "node server.js"
   },
   "keywords": [],
@@ -25,6 +25,7 @@
     "webpack": "^3.11.0",
     "webpack-dev-middleware": "^2.0.5",
     "webpack-dev-server": "^2.11.1",
+    "webpack-merge": "^4.1.1",
     "xml-loader": "^1.2.1"
   },
   "dependencies": {
