--- a/webpack_demo/package.json
+++ b/webpack_demo/package.json
@@ -21,6 +21,8 @@
     "file-loader": "^1.1.6",
     "html-webpack-plugin": "^2.30.1",
     "style-loader": "^0.20.1",
+    "ts-loader": "^4.0.0",
+    "typescript": "^2.7.2",
     "uglifyjs-webpack-plugin": "^1.1.8",
     "webpack": "^3.11.0",
     "webpack-dev-middleware": "^2.0.5",
@@ -29,6 +31,8 @@
     "xml-loader": "^1.2.1"
   },
   "dependencies": {
-    "lodash": "^4.17.5"
+    "babel-polyfill": "^6.26.0",
+    "lodash": "^4.17.5",
+    "whatwg-fetch": "^2.0.3"
   }
 }
